[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genx"
version = "0.0.1"
keywords = ["MA-XRF"]
authors = [
    { name = "Alessandro Bombini" }
]
license = {text = "Apache License 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "h5py >= 2.10.0",
    "Pillow",
    "matplotlib >= 3.3.2",
    "numpy >= 1.18.5",
    "scikit-image >= 0.17.2",
    "scikit-learn >= 0.23.2",
    "scipy >= 1.5.2", 
]
requires-python = ">=3.6"
